--- a/src/FontAwesome/index.css
+++ b/src/FontAwesome/index.css
@@ -6055,9 +6055,9 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
   font-display: block;
   src:
-    url("../../font/fa/fa-brands-400.woff2") format("woff2"),
-    url("../../font/fa/fa-brands-400.woff") format("woff"),
-    url("../../font/fa/fa-brands-400.ttf") format("truetype");
+    url("./fa-brands-400.woff2") format("woff2"),
+    url("./fa-brands-400.woff") format("woff"),
+    url("./fa-brands-400.ttf") format("truetype");
 }
 
 .fab {
@@ -6071,9 +6071,9 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
   font-display: block;
   src:
-    url("../../font/fa/fa-regular-400.woff2") format("woff2"),
-    url("../../font/fa/fa-regular-400.woff") format("woff"),
-    url("../../font/fa/fa-regular-400.ttf") format("truetype");
+    url("./fa-regular-400.woff2") format("woff2"),
+    url("./fa-regular-400.woff") format("woff"),
+    url("./fa-regular-400.ttf") format("truetype");
 }
 
 .far {
@@ -6087,9 +6087,9 @@ readers do not read off random characters that represent icons */
   font-weight: 900;
   font-display: block;
   src:
-    url("../../font/fa/fa-solid-900.woff2") format("woff2"),
-    url("../../font/fa/fa-solid-900.woff") format("woff"),
-    url("../../font/fa/fa-solid-900.ttf") format("truetype");
+    url("./fa-solid-900.woff2") format("woff2"),
+    url("./fa-solid-900.woff") format("woff"),
+    url("./fa-solid-900.ttf") format("truetype");
 }
 
 .fa,
